update timeside api url
